[package]
name = "libs"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(any(windows, target_os="macos"))'.dependencies]
after-effects = {git = "https://github.com/virtualritz/after-effects", rev = "c70729a", features = ["catch-panics"]}
# premiere = {git = "https://github.com/virtualritz/after-effects", rev = "c70729a"}

[target.'cfg(any(windows, target_os="macos"))'.build-dependencies]
pipl = {git = "https://github.com/virtualritz/after-effects", rev = "c70729a"}
